Commiter admin.js

--- a/HTML/accueil.html
+++ b/HTML/accueil.html
@@ -21,7 +21,7 @@
                 </div>
                 <div id="mdp_input">
                     <label for="mot de passe">Mot de passe</label>
-                    <input type="text" name="mot de passe" id="mot_de_passe">
+                    <input type="password" name="mot de passe" id="mot_de_passe">
                     <small id="passwordError"></small><br>
                 </div>
                 <div class="btn_submit"><button type="submit">connecter</button></div>
