--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -26,40 +26,17 @@
         <table>
             <thead>
                 <tr>
-                    <th>Nom</th>
-                    <th>Prénom</th>
-                    <th>Email</th>
-                    <th>Actions</th>
+                  <th>Nom</th>
+                  <th>Prénom</th>
+                  <th>Email</th>
+                  <th>Actions</th>
                 </tr>
             </thead>
-                  <tbody id="userTableBody">
-                <tr>
-                    <td>Nom</td>
-                    <td>Prénom</td>
-                    <td>Email</td>
-                    <td>
-                        <button>
-                             <label class="switch">
-                            <input type="checkbox" checked>
-                            <span class="slider"></span>
-                        </label>
-                        </button>
-                       
-                            <div class="dropdown">
-                            <button class="options-btn" tabindex="0">
-                                 <i class="fa-solid fa-ellipsis-v"></i>
-                            </button>
-                                <div class="dropdown-content">
-                                      <a href="#" class="modifier">Modifier</a>
-                                      <a href="#" class="supprimer">Supprimer</a>
-                                </div>
-    </div>
-                    </td>
-
-                </tr>
+            <tbody id="userTableBody">
+                
             </tbody>
         </table>
-        </table>
     </div>
+    <script src="../JS/admin.js"></script>
 </body>
 </html>
