--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -11,25 +11,26 @@
     <header>
         <h1>Bienvenu sur la page d'accueil Admin </h1>
     </header>
+    <div class="btn_admin"><button id="creer_admin">Créer un compte admin</button></div>
     <form id="FormInscription">
-  <h2>Formulaire d'inscription </h2>
-  <input type="text" name="nom" placeholder="Entrez votre nom">
-  <span class="error"></span>
+        <h2>Formulaire d'inscription </h2>
+        <input type="text" name="nom" placeholder="Entrez votre nom">
+        <span class="error"></span>
 
-  <input type="text" name="prenom" placeholder="Entrez votre prénom">
-  <span class="error"></span>
+        <input type="text" name="prenom" placeholder="Entrez votre prénom">
+        <span class="error"></span>
 
-  <input type="email" name="email" placeholder="Entrez votre email">
-  <span class="error"></span>
+        <input type="email" name="email" placeholder="Entrez votre email">
+        <span class="error"></span>
 
-  <input type="password" name="password" placeholder="Entrez votre mot de passe">
-  <span class="error"></span>
+        <input type="password" name="password" placeholder="Entrez votre mot de passe">
+        <span class="error"></span>
 
-  <input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe">
-  <span class="error"></span>
+        <input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe">
+        <span class="error"></span>
 
-  <button type="submit">Ajouter</button>
-</form>
+        <button type="submit">Ajouter</button>
+    </form>
 
     
     <div class="container">
