--- a/HTML/accueil.html
+++ b/HTML/accueil.html
@@ -24,7 +24,7 @@
                     <input type="password" name="mot de passe" id="mot_de_passe">
                     <small id="passwordError"></small><br>
                 </div>
-                <div class="btn_submit"><button type="submit">connecter</button></div>
+                <div class="btn_submit"><button type="submit" id="bouton_connexion">connecter</button></div>
             </form>
         </div>
     </div>
