--- a/HTML/creer_admin.html
+++ b/HTML/creer_admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/accueil.css">
+    <link rel="stylesheet" href="../CSS/creer_admin.css">
     <title>Creer un compte admin</title>
 </head>
 <body>
@@ -11,25 +11,25 @@
         <div class="image_accueil">
             <img src="../Assets/login_image.png" alt="login image">
         </div>
-        <div class="connectez-vous"><h1>Creer un compte admin</h1></div>
+        <div class="creer_admin"><h1>Creer un compte admin</h1></div>
         <div> 
-            <form action="" id="formulaire_connexion">
-                <div id="email_input">
+            <form action="" id="formulaire_creer_admin">
+                <div id="email_creer_admin_input">
                     <label for="email">Email</label>
                     <input type="text" name="email" id="email">
-                    <small id="emailError" ></small><br>
+                    <small id="emailError_creer_admin" ></small><br>
                 </div>
-                <div id="mdp_input">
+                <div id="mdp_creer_admin_input">
                     <label for="mot de passe">Mot de passe</label>
                     <input type="password" name="mot de passe" id="mot_de_passe">
-                    <small id="passwordError"></small><br>
+                    <small id="passwordError_creer_admin"></small><br>
                 </div>
-                <div id="confirm_mdp_input">
+                <div id="confirm_mdp_creer_admin_input">
                     <label for="mot de passe">Confirmer votre mot de passe</label>
                     <input type="password" name="mot de passe" id="mot_de_passe">
                     <small id="confirmpasswordError"></small><br>
                 </div>
-                <div class="btn_submit"><button type="submit">Valider</button></div>
+                <div class="btn_submit_creer_admin"><button type="submit" id="bouton_creer_admin">Valider</button></div>
             </form>
         </div>
     </div>
