--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -40,6 +40,7 @@
                   <th>Nom</th>
                   <th>Prénom</th>
                   <th>Email</th>
+                  <th>Date</th>
                   <th>Actions</th>
                 </tr>
             </thead>
