--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -11,7 +11,9 @@
     <header>
         <h1>Bienvenu sur la page d'accueil Admin </h1>
     </header>
+    <!-- on a le bouton de création de compte admin  -->
     <div class="btn_admin"><button id="creer_admin">Créer un compte admin</button></div>
+    <!-- Formulaire pour enregistrer un membre   -->
     <form id="FormInscription">
         <h2>Formulaire d'inscription </h2>
         <input type="text" name="nom" placeholder="Entrez votre nom">
@@ -28,11 +30,11 @@
 
         <input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe">
         <span class="error"></span>
-
+        <!-- Bouton pour envoyer les informations -->
         <button type="submit">Ajouter</button>
     </form>
 
-    
+    <!-- Table pour afficher les utilisateurs -->
     <div class="container">
         <table>
             <thead>
