--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -41,6 +41,7 @@
                   <th>Prénom</th>
                   <th>Email</th>
                   <th>Date</th>
+                  <th>Status</th>
                   <th>Actions</th>
                 </tr>
             </thead>
